--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,13 @@
 // Mixins Here
+
+ .btn(@bg, @color,) {
+    cursor: pointer;
+    background: @bg;
+    color:@color;
+    font-size: 2rem;
+    padding: 4%;
+    text-align: flex-start;
+    margin: auto;
+    border-radius: 1rem;
+    }
+    
