--- a/less/home-page.less
+++ b/less/home-page.less
@@ -57,8 +57,6 @@
         margin-bottom: 26px;
       }
 
-      .btn {
-      }
     }
 
     .walk-img {
@@ -73,3 +71,40 @@
     }
   }
 }// home
+
+.again {
+  flex-direction: column;
+}
+
+
+ .btn  {
+  cursor: pointer;
+  background: @button-bg;
+  color:@color;
+  font-size: 2rem;
+  padding: 4%;
+  text-align: center;
+  margin: auto;
+  border-radius: 1.0rem;
+  }
+
+ .again {
+    display:flex;
+    align-items: center;
+    color: blue;
+  }
+
+nav {
+  display: flex;
+  justify-content: center;
+}
+
+   nav a {
+    justify-content: center;
+    font-size: 2rem;
+    color: black;
+    text-decoration: none;
+    padding: 20px;
+
+  }
+
