--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @media (max-width: 500px) {
   header {
+    display: flex;
     padding: 15px;
     background-color: lightblue;
   }
@@ -22,14 +23,26 @@
     cursor: pointer;
     background: darkblue;
     color: white;
-    font-size: 2rem;
-    padding: 3%;
+    font-size: 5rem;
+    padding: 4%;
     text-align: center;
+    margin: auto;
     border-radius: 1rem;
   }
-  div.walk-text .btn {
-    width: 25%;
-  }
+}
+.footer {
+  color: #22283B;
+  background: #f4f4f4;
+  padding: 20px 0;
+  border: 1px double #e0e0e0;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav {
+  display: flex;
+  justify-content: center;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -193,6 +206,22 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.again {
+  display: flex;
+  align-items: center;
+  color: blue;
+}
+nav {
+  display: flex;
+  justify-content: center;
+}
+nav a {
+  justify-content: center;
+  font-size: 2rem;
+  color: black;
+  text-decoration: none;
+  padding: 20px;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -257,6 +286,10 @@ footer {
 .again {
   flex-direction: column;
 }
+div .btn {
+  display: flex;
+  justify-content: center;
+}
 .btn {
   cursor: pointer;
   background: darkblue;
@@ -264,22 +297,10 @@ footer {
   font-size: 2rem;
   padding: 4%;
   text-align: center;
-  margin: auto;
+  margin: 20%;
   border-radius: 1rem;
 }
-.again {
-  display: flex;
-  align-items: center;
-  color: blue;
-}
-nav {
-  display: flex;
-  justify-content: center;
-}
-nav a {
-  justify-content: center;
-  font-size: 2rem;
-  color: black;
-  text-decoration: none;
-  padding: 20px;
+.btn:hover {
+  background-color: #4CAF50;
+  color: purple;
 }
