--- a/less/home-page.less
+++ b/less/home-page.less
@@ -76,7 +76,10 @@
   flex-direction: column;
 }
 
-
+div .btn {
+  display: flex;
+  justify-content: center;
+}
  .btn  {
   cursor: pointer;
   background: @button-bg;
@@ -84,27 +87,15 @@
   font-size: 2rem;
   padding: 4%;
   text-align: center;
-  margin: auto;
+  margin: 20%;
   border-radius: 1.0rem;
+  
+
+  .btn:hover {
+    background-color: #4CAF50; 
+    color: purple;
   }
+ }
 
- .again {
-    display:flex;
-    align-items: center;
-    color: blue;
-  }
-
-nav {
-  display: flex;
-  justify-content: center;
-}
-
-   nav a {
-    justify-content: center;
-    font-size: 2rem;
-    color: black;
-    text-decoration: none;
-    padding: 20px;
-
-  }
+ 
 
