--- a/less/mixins.less
+++ b/less/mixins.less
@@ -11,3 +11,25 @@
     border-radius: 1rem;
     }
     
+
+   .footer {
+      color: #22283B;
+      background: #f4f4f4;
+      padding: 20px 0;
+      border: 1px double #e0e0e0;
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+
+
+
+
+    nav  {
+      display: flex;
+      justify-content: center;
+    }
+  
+    
